<resources>
    <!-- App strings -->
    <string name="app_name">AGAPI</string>

    <!-- Common dialog strings -->
    <string name="dialog_error_title">Klaida</string>
    <string name="dialog_button_confirm">Patvirtinti</string>
    <string name="dialog_button_back">Grįžti</string>
    <string name="dialog_button_cancel">Atšaukti</string>

    <!-- Title layout strings -->
    <string name="title_activity_main">AGAPI</string>
    <string name="title_my_profile">Mano profilis</string>
    <string name="title_contacts">Kontaktai</string>
    <string name="title_settings">Nustatymai</string>

    <!-- Form layout strings -->
    <string name="form_button_left">Button1</string>
    <string name="form_button_right">Button2</string>

    <!-- Profile create form strings -->
    <string name="form_profile_edit_title">Profilio redagavimas</string>
    <string name="form_profile_create_title">Profilio sukūrimas</string>
    <string name="form_profile_create_button_left">Atšaukti</string>
    <string name="form_profile_create_button_right">Tęsti</string>
    <string name="form_profile_create_input_text_name">Vardas *</string>
    <string name="form_profile_create_input_text_surname">Pavardė *</string>
    <string name="form_profile_create_input_text_birthdate">Gimimo data *</string>
    <string name="form_profile_create_input_text_phone">Telefonas *</string>
    <string name="form_profile_create_input_text_email">El. paštas</string>
    <string name="form_profile_create_input_text_street_address">Gatvės pavadinimas, namas ir buto nr. *</string>
    <string name="form_profile_create_input_text_city">Miestas *</string>
    <string name="form_profile_create_input_text_country">Šalis *</string>

    <!-- Health info create form strings -->
    <string name="form_profile_health_create_dialog_select_title">Pasirinkite savo sveikatos negalavimų kategorijas</string>
    <string name="form_profile_health_create_button_left">Grįžti</string>
    <string name="form_profile_health_create_button_right">Išsaugoti</string>

    <!-- Profile preview strings -->
    <string name="form_profile_preview_button_right">Redaguoti</string>
    <string name="form_profile_preview_button_left">Ištrinti</string>
    <string name="form_profile_preview_text_none">Nėra</string>
    <string name="form_profile_preview_text_no_description">Nėra detalios informacijos</string>
    <string name="form_profile_preview_text_name">Vardas</string>
    <string name="form_profile_preview_text_surname">Pavardė</string>
    <string name="form_profile_preview_text_birthdate">Gimimo data</string>
    <string name="form_profile_preview_text_phone">Telefonas</string>
    <string name="form_profile_preview_text_email">El. paštas</string>
    <string name="form_profile_preview_text_street_address">Gatvės pavadinimas, namas ir buto nr.</string>
    <string name="form_profile_preview_text_city">Miestas</string>
    <string name="form_profile_preview_text_country">Šalis</string>

    <!-- Contact create form strings -->
    <string name="form_contact_edit_title">Kontakto redagavimas</string>
    <string name="form_contact_create_title">Naujas kontaktas</string>
    <string name="form_contact_create_button_left">Atšaukti</string>
    <string name="form_contact_create_button_right">Išsaugoti</string>
    <string name="form_contact_create_checkbox_in_queue">Ar naudoti šį kontaktą pagalbos iškvietimo metu?</string>
    <string name="form_contact_create_text_name">Vardas *</string>
    <string name="form_contact_create_text_phone">Telefono numeris *</string>
    <string name="form_contact_create_text_email">El. paštas</string>
    <string name="form_contact_create_text_personal_message">Asmeninė žinutė</string>

    <!-- Contact preview form strings -->
    <string name="form_contact_preview_text_in_queue">Kontakto būsena</string>
    <string name="form_contact_text_in_queue">Kontaktas naudojamas pagalbos iškvietimui</string>
    <string name="form_contact_text_not_in_queue">Kontaktas nebus naudojamas pagalbos iškvietimui</string>
    <string name="form_contact_preview_text_name">Vardas</string>
    <string name="form_contact_preview_text_phone">Telefono numeris</string>
    <string name="form_contact_preview_text_email">El. Paštas</string>
    <string name="form_contact_preview_text_personal_message">Asmeninė žinutė</string>
    <string name="form_contact_preview_text_none">Nėra</string>
</resources>


